Ansible_k8s_task8/roles/sonar_k8s/files/sonar.yml


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-dep
  namespace: sonar
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonar
        image: sonarqube:7.1
        ports:
        - name: son-port1
          containerPort: 9000

        volumeMounts:
        - name: sonar-dep-data
          mountPath: /opt/sonarqube/data/
        - name: sonar-dep-ext
          mountPath: /opt/sonarqube/extensions/
      volumes:
      - name: sonar-dep-data
        persistentVolumeClaim:
          claimName: sonar-vol-pvc-data
      - name: sonar-dep-ext
        persistentVolumeClaim:
          claimName: sonar-vol-pvc-ext
---


apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
  namespace: sonar
spec:
  selector:
    app: sonar
  ports:
  - name: son-svc-port1
    port: 80
    targetPort: son-port1
---


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: sonar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonar
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-svc
          servicePort: son-svc-port1
